WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287062
REGRESSION(
289593@main
): WebP images are displayed as broken images in lockdown mode
https://bugs.webkit.org/show_bug.cgi?id=287062
Summary
REGRESSION(289593@main): WebP images are displayed as broken images in lockdo...
Said Abou-Hallawa
Reported
2025-02-04 18:51:51 PST
Since process-entitlements.sh can set the the entitlements for the allowed images types in lockdown mode correctly, CGImageSourceSetAllowableTypes() should not be called in lockdown mode
Attachments
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2025-02-04 18:52:10 PST
rdar://144177767
Said Abou-Hallawa
Comment 2
2025-02-04 21:45:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40034
EWS
Comment 3
2025-02-05 03:24:24 PST
Committed
289860@main
(80451b7f998e): <
https://commits.webkit.org/289860@main
> Reviewed commits have been landed. Closing PR #40034 and removing active labels.
EWS
Comment 4
2025-02-05 12:18:49 PST
Committed
289651.42@safari-7621-branch
(1c5c08d4d2dc): <
https://commits.webkit.org/289651.42@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2510 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug