REGRESSION(289593@main): WebP images are displayed as broken images in lockdown mode https://bugs.webkit.org/show_bug.cgi?id=287062 rdar://144177767

Reviewed by Per Arne Vollan.

Since process-entitlements.sh can set the the entitlements for the allowed images
types in lockdown mode correctly, CGImageSourceSetAllowableTypes() should not be
called in lockdown mode.

* Source/WebCore/platform/graphics/cg/UTIRegistry.mm:
(WebCore::lockdownSupportedImageTypes):
* Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::platformInitialize):

Canonical link: https://commits.webkit.org/289860@main